# hexane

./: Cargo.toml  README.org
.sqlx/: query-22e4b28c1df3baf66366d1032b87d70071b70c43f776cf300e1d25c595ef5e67.json  query-5f8023252fe90e59cbc568d4211feda8c34aa74e88468aca451f66f962a2b382.json  query-722070d756cfef1a3f0dcf0990dc93445cc2c18aa1ff5b98bd971a0f0e074eb7.json  query-ade3111a9b1a9057f694f8fec30397a5149b9529d0da39b3e8e0cef3f173f32d.json  query-d388dc931f6327b835f716c1055407f7fbab983c255f872a5cced41d296fd076.json  query-e7f620bc1d0ed4b931a20b65616bcc24795d7e406ed56e33a888870f386ff0da.json
hexane-backend/: Cargo.toml
hexane-backend/migrations/: 00000001_create_users_schema.sql  00000003_create_datasource_schema.sql  00000004_users_account_add_credits.sql
hexane-backend/queries/: daily-registrations.sql
hexane-backend/queries/account/: credit-decrement.sql  credit.sql  limits.sql  register.sql  user-exists.sql  user-password.sql
hexane-backend/queries/datasource/: delete-file.sql  file-by-hash.sql  file-uploads-size.sql  insert-file.sql  list.sql  select-categories.sql
hexane-backend/resources/public/: gd.css  style.css
hexane-backend/src/: app.rs  handlers.rs  main.rs  middlewares.rs  pages.rs  types.rs
hexane-backend/src/handlers/: account.rs  datasource.rs  query.rs
hexane-backend/src/pages/: datasource.rs  query.rs
hexane-backend/src/queries/account/: user-exists.sql
hexane-backend/templates/: index.html  navigation.html
hexane-backend/templates/html/: div-status.html  li-anchor.html  li.html  option.html  p-status.html  ul.html
hexane-backend/templates/navigation/: default.html  logged-in.html
hexane-backend/templates/pages/: 401.html  404.html  account.html  datasource.html  home.html  query.html
hexane-backend/templates/pages/account/: login.html  register.html
hexane-backend/templates/pages/datasource/: file-list-entry.html  file-list.html  upload-form.html  upload-status.html
hexane-backend/templates/pages/query/: query-form.html  query-response-references.html  query-response.html
hexane-file-processor/: Cargo.toml
hexane-file-processor/queries/datasource/: get-unprocessed-file-count.sql  get-unprocessed-file.sql  set-processed.sql
hexane-file-processor/src/: lib.rs  main.rs
hexane-shared/: Cargo.toml
hexane-shared/src/: lib.rs
