[package]
name = 'hexane-shared'
version = '0.1.0'
edition = '2021'

[dependencies]
serde_json = '1.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.reqwest]
version = '0.11'
features = ['json']

[dependencies.uuid]
version = '1.7'
features = ['serde']

[dependencies.sqlx]
version = '0.7'
features = [
    'runtime-tokio',
    'postgres',
    'uuid',
    'macros',
    'bigdecimal'
]
